# ZYCEONGAO-OmniCompute

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: README.md  vector_add.py
omni-cli/: Cargo.toml
omni-cli/src/: commands.rs  main.rs
omni-core/: Cargo.toml
omni-core/benches/: jit_latency.rs
omni-core/src/: hardware.rs  jit.rs  lib.rs
omni-core/src/codegen/: amdgpu.rs  metal.rs  mod.rs  spirv.rs
omni-core/src/memory/: allocator.rs  mod.rs  pager.rs
omni-core/src/mlir/: dialect.rs  mod.rs  passes.rs
omni-core/tests/: integration_test.rs
omni-net/: Cargo.toml
omni-net/src/: lib.rs
omni-net/src/crypto/: mod.rs  obfuscator.rs  tee.rs
omni-net/src/p2p/: mod.rs  node.rs  protocol.rs
omni-net/src/scheduler/: mod.rs  router.rs
omni-shim/: Cargo.toml
omni-shim/src/: cuda_driver.rs  cuda_runtime.rs  interceptor.rs  lib.rs
