[workspace]
members = [
    "omni-shim",
    "omni-core",
    "omni-net",
    "omni-cli",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["OmniCompute Contributors"]
license      = "Apache-2.0"
repository   = "https://github.com/omnicompute/omnicompute"
homepage     = "https://omnicompute.dev"
description  = "Cross-heterogeneous hardware runtime virtualization compiler and distributed compute scheduling network"
keywords     = ["mlir", "llvm", "jit", "heterogeneous", "compute"]
categories   = ["compilers", "hardware-support", "asynchronous"]

# ─── Shared Dependencies ──────────────────────────────────────────────────────
[workspace.dependencies]
# Async runtime
tokio        = { version = "1.40",  features = ["full"] }
# Serialization
serde        = { version = "1.0",   features = ["derive"] }
serde_json   = { version = "1.0" }
bincode      = { version = "1.3" }
# Logging
tracing      = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow       = { version = "1.0" }
thiserror    = { version = "1.0" }
# Concurrency
crossbeam    = { version = "0.8" }
dashmap      = { version = "6.0" }
parking_lot  = { version = "0.12" }
# Low-level
libc         = { version = "0.2" }
# Crypto
aes-gcm      = { version = "0.10" }
blake3       = { version = "1.5" }
ed25519-dalek = { version = "2.1" }
rand         = { version = "0.8" }
# Network
libp2p       = { version = "0.54", features = [
    "tcp", "dns", "websocket", "noise", "yamux",
    "kad", "mdns", "ping", "identify",
    "macros", "tokio",
] }
# CLI
clap         = { version = "4.5", features = ["derive"] }
indicatif    = { version = "0.17" }
colored      = { version = "2.1" }
# Utilities
once_cell    = { version = "1.19" }
bytes        = { version = "1.7" }
uuid         = { version = "1.10", features = ["v4"] }

# ─── Release Profile ──────────────────────────────────────────────────────────
# Aggressive production optimizations for maximum runtime performance
[profile.release]
opt-level     = 3       # Maximum compiler optimization level
lto           = "fat"   # Enable aggressive full-module Link-Time Optimization
codegen-units = 1       # Sacrifice compile speed for perfect global codegen
panic         = "abort" # Abort on panic — no unwinding overhead
strip         = true    # Strip all debug symbols — anti-reverse-engineering

# ─── Dev Profile ─────────────────────────────────────────────────────────────
[profile.dev]
opt-level = 1           # Light optimization for faster iteration
debug     = true

# ─── Benchmark Profile ───────────────────────────────────────────────────────
[profile.bench]
opt-level     = 3
lto           = "thin"
codegen-units = 1
