[package]
name        = "omni-cli"
description = "Developer CLI toolchain for OmniCompute — run any AI workload on any hardware"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "omnicompute"
path = "src/main.rs"

[dependencies]
omni-core = { path = "../omni-core" }
omni-net  = { path = "../omni-net" }

# CLI argument parsing
clap      = { workspace = true }
# Async runtime
tokio     = { workspace = true }
# Terminal UI — progress bars, spinners
indicatif = { workspace = true }
# Colored terminal output
colored   = { workspace = true }
# Serialization for config files
serde     = { workspace = true }
serde_json = { workspace = true }
# Logging
tracing   = { workspace = true }
tracing-subscriber = { workspace = true }
# Error handling
anyhow    = { workspace = true }
# Utilities
uuid      = { workspace = true }
once_cell = { workspace = true }
